--- a/style.css
+++ b/style.css
@@ -8,19 +8,23 @@ html {
   font-size: 62.5%;
 }
 
+body {
+  background-color: #f1f3f5;
+}
+
 main {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 12rem;
+  margin-top: 6rem;
 }
 
-/* .btn {
-  margin-top: 18rem;
-} */
-
-.numbers {
-  max-width: 40rem;
+.container {
+  max-width: 50%;
+  padding: 3.2rem;
+  background-color: #adb5bd;
+  border: 2px solid #96f2d7;
+  border-radius: 9px;
 }
 
 .grid3cols {
@@ -36,16 +40,21 @@ main {
 .grid-4-cols {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  gap: 0.6rem;
 }
 
 .display {
   grid-column: 1/-1;
   text-align: right;
-  border: 2px solid #ced4da;
+  border: 1px solid rgba(255, 255, 255, 0.25);
   padding: 3rem 0.2rem;
-  border-radius: 4px;
+  border-radius: 9px;
   font-size: 3rem;
   font-weight: 700;
+  margin-bottom: 1rem;
+  background-color: rgba(255, 255, 255, 0.45);
+  box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(15px);
 }
 
 .gridcol1 {
@@ -54,20 +63,28 @@ main {
 
 .gridcol2 {
   grid-column: 3/-1;
+  font-size: 2.4rem;
 }
 
 button {
-  border: 1px solid #fff;
+  border: 1px solid #96f2d7;
   padding: 3rem;
-  background-color: #888;
+  background-color: #868e96;
   color: black;
-  border-radius: 4px;
+  border-radius: 9px;
   text-align: center;
   font-weight: 700;
   cursor: pointer;
   font-size: 1.6rem;
+  transition: all 0.3s;
 }
 
 button:active {
-  background-color: #333;
+  background-color: #1864ab;
+}
+
+.operators,
+.gridcol1,
+.gridcol2 {
+  background-color: #495057;
 }
