--- a/style.css
+++ b/style.css
@@ -9,7 +9,10 @@ html {
 }
 
 body {
-  background-color: #f1f3f5;
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  min-width: 100vh;
 }
 
 main {
@@ -43,11 +46,11 @@ main {
   gap: 0.6rem;
 }
 
-.display {
+.display-container {
   grid-column: 1/-1;
   text-align: right;
   border: 1px solid rgba(255, 255, 255, 0.25);
-  padding: 3rem 0.2rem;
+  padding: 1rem 0.2rem;
   border-radius: 9px;
   font-size: 3rem;
   font-weight: 700;
@@ -55,6 +58,16 @@ main {
   background-color: rgba(255, 255, 255, 0.45);
   box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(15px);
+}
+
+.last-operation {
+  content: "";
+  height: 3.4rem;
+  font-size: 2.4rem;
+}
+
+.current-operation {
+  font-size: 5rem;
 }
 
 .gridcol1 {
@@ -75,7 +88,7 @@ button {
   text-align: center;
   font-weight: 700;
   cursor: pointer;
-  font-size: 1.6rem;
+  font-size: 2.4rem;
   transition: all 0.3s;
 }
 
@@ -85,6 +98,90 @@ button:active {
 
 .operators,
 .gridcol1,
-.gridcol2 {
+.gridcol2,
+.equals {
   background-color: #495057;
+}
+
+/* Footer */
+
+footer {
+  text-align: center;
+  /* position: fixed; */
+  left: 0;
+  bottom: 0;
+  width: 100%;
+}
+
+.icons {
+  display: flex;
+  gap: 0.8rem;
+  justify-content: center;
+  font-size: 2.4rem;
+}
+
+.icons a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.copyright {
+  font-size: 1.6rem;
+  color: #fff;
+}
+
+@media (max-width: 45em) {
+  .container {
+    max-width: 100%;
+  }
+}
+
+@media (max-width: 32em) {
+  .container {
+    padding: 1.8rem;
+    margin-bottom: 3.2rem;
+    max-width: 100%;
+  }
+
+  footer {
+    position: relative;
+  }
+
+  button {
+    padding: 1.8rem;
+    font-size: 1.6rem;
+  }
+
+  .icons {
+    font-size: 1.4rem;
+  }
+
+  .copyright {
+    font-size: 1rem;
+  }
+
+  .last-operation {
+    height: 2.6rem;
+    font-size: 2rem;
+  }
+
+  .current-operation {
+    font-size: 2.6rem;
+  }
+}
+
+@media (max-width: 18em) {
+  button {
+    padding: 1.4rem;
+    font-size: 1.2rem;
+  }
+
+  .last-operation {
+    height: 2.4rem;
+    font-size: 1.6rem;
+  }
+
+  .current-operation {
+    font-size: 2.4rem;
+  }
 }
