--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ main {
   background-color: #adb5bd;
   border: 2px solid #96f2d7;
   border-radius: 9px;
+  margin-bottom: 4.6rem;
 }
 
 .grid3cols {
@@ -122,17 +123,40 @@ footer {
 
 .icons a {
   text-decoration: none;
-  color: #fff;
+  color: #f8f9fa;
 }
 
 .copyright {
   font-size: 1.6rem;
-  color: #fff;
+  color: #f8f9fa;
 }
 
 @media (max-width: 45em) {
   .container {
     max-width: 100%;
+    padding: 2.8rem;
+  }
+
+  button {
+    padding: 2rem;
+    font-size: 1.8rem;
+  }
+
+  .last-operation {
+    height: 2.4rem;
+    font-size: 2.4rem;
+  }
+
+  .current-operation {
+    font-size: 3.6rem;
+  }
+
+  .icons {
+    font-size: 1.6rem;
+  }
+
+  .copyright {
+    font-size: 1.4rem;
   }
 }
 
@@ -140,12 +164,12 @@ footer {
   .container {
     padding: 1.8rem;
     margin-bottom: 3.2rem;
-    max-width: 100%;
+    /* max-width: 100vw; */
   }
 
-  footer {
+  /* footer {
     position: relative;
-  }
+  } */
 
   button {
     padding: 1.8rem;
